--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,3 +17,5 @@
 @import 'selected.scss';
 @import 'cat-list.scss';
 @import 'register.scss';
+@import 'signal.scss';
+@import 'disconnected.scss';
