--- a/templates/disconnected/index.html.twig
+++ b/templates/disconnected/index.html.twig
@@ -8,10 +8,12 @@
     .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
-<div class="example-wrapper">
+
+    <div class="disconnected">
     {{ form_start(form) }}
         {{ form_widget(form.place) }}
         <button type="submit" class="btn btn-success search">Lancer la recherche dans cette commune</button>
     {{ form_end(form) }}
-</div>
+    </div>
+
 {% endblock %}
