--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -9,30 +9,30 @@
 </style>
 
 <div class="example-wrapper">
-    <h1>Signalez un chat</h1>
-
-    <p>Vous êtes sur le point de signaler NOM du CHAT</p>
+    <h3>Signalez un chat</h3>
+    <p>Vous êtes sur le point de signaler <strong>{{ cat.name }}</strong>.</p>
+    <hr>
     {{ form_start(form) }}
-    <p>Vous êtes situé(e) aux coordonnées suivantes</p>
-    <div id="infoposition"></div>
-    
-    {{ form_widget(form.coordx) }}
-    {{ form_widget(form.coordy) }}
+        <p>Vous êtes situé(e) aux coordonnées suivantes</p>
+        <p>Latitude</p>    
+        {{ form_widget(form.coordx) }}
+        <p>Longitude</p> 
+        {{ form_widget(form.coordy) }}
     <div class="comment_form">
-                
-        
         <p>Veuillez remplir le formulaire suivant pour préciser votre signalement</p>
-                <p>
-                {{ form_label(form.message, 'message :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
-                </p>
-                <p>
-                {{ form_label(form.status, 'status :', {'label_attr': {'class': 'form-label'}}) }}
-                {{ form_widget(form.status, {'attr': {'class': 'form-control'}}) }}
-                </p>
-                <br>
-                <button type="submit" class="btn btn-warning" onclick="return confirm('Attention, les informations que vous fournissez seront transmises au propriétaire du chat');">Enregistrer</button>
-            </div>
+        <p>
+        {{ form_label(form.message, 'message :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(form.message, {'attr': {'class': 'form-control'}}) }}
+        </p>
+        <p>
+        {{ form_label(form.status, 'status :', {'label_attr': {'class': 'form-label'}}) }}
+        {{ form_widget(form.status, {'attr': {'class': 'form-control cat-status'}}) }}
+        </p>
+        <br>
+        <div class="center">
+        <button type="submit" class="btn btn-warning" onclick="return confirm('Attention, les informations que vous fournissez seront transmises au propriétaire du chat');">Enregistrer</button>
+        </div>
+    </div>
     {{ form_end(form) }}
 </div>
 
