--- a/assets/styles/report.scss
+++ b/assets/styles/report.scss
@@ -3,3 +3,10 @@
     width: 100%;
     border: 1px solid black;
 }
+
+.cat-reported {
+    width: 100%;
+    height: auto;
+    padding: 1rem;
+    border-radius: 30px;
+}
