--- a/assets/styles/login.scss
+++ b/assets/styles/login.scss
@@ -1,10 +1,10 @@
 .login {
     margin: 5vh auto;;
-    max-width: 800px;
+    max-width: 600px;
     min-width: 200px;
     border-radius: 10px;
     box-shadow: 0px 3px 4px grey;
-    border-radius: 10px;
+    border-radius: 15px;
     display: block;
 
 
@@ -19,17 +19,9 @@
         margin : auto;
     }
     
-    #cat-connexion-picture {
-        width: 100%;
-        height: 400px;
-        background:linear-gradient(to bottom, rgb(245, 245, 245, 0), 80%, rgb(245, 245, 245, 1)), url("/public/pictures/cat-blue-eyes.webp");
-        object-fit:cover;
-        object-position: center;
-        overflow: hidden;
-        opacity : 0.8;
-        border-top-left-radius: 10px;
-        border-top-right-radius: 10px;
-        }
+    #login-title {
+        padding-top: 2rem;
+    }
 
     .mb-3 {
         margin: 0 1rem;
