--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -2,11 +2,11 @@
 
 {% block title %} {{ parent() }} - Edition article{% endblock %}
 {% block body %}
-    <h1>Edit Article</h1>
+    <h3>Modifier l'article</h3>
 
     {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_article_index') }}">Retour à la liste</a>
 
     {{ include('article/_delete_form.html.twig') }}
 {% endblock %}
