--- a/templates/article/index.html.twig
+++ b/templates/article/index.html.twig
@@ -11,7 +11,6 @@
                     <th>Détails</th>
                     <th>Date</th>
                     <th>Photo</th>
-                    <th>Texte de remplacement</th>
                 </tr>
             </thead>
             <tbody>
@@ -23,15 +22,14 @@
                     </td>
                     <td>{{ article.date|date('Y-m-d H:i') }}</td>
                     <td><img class="article-picture-crud" src="/pictures/{{ article.picture }}"/></td>
-                    <td>{{ article.alt }}</td>
                     <td>
-                        <a href="{{ path('app_article_show', {'id': article.id}) }}">show</a>
-                        <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+                        <a class="btn btn-outline-primary" href="{{ path('app_article_show', {'id': article.id}) }}">Détails</a>
+                        <a class="btn btn-outline-primary" href="{{ path('app_article_edit', {'id': article.id}) }}">Modifier</a>
                     </td>
                 </tr>
             {% else %}
                 <tr>
-                    <td colspan="5">no records found</td>
+                    <td colspan="5">Aucun article trouvé</td>
                 </tr>
             {% endfor %}
             </tbody>
