--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -21,10 +21,6 @@
                 <td>{{ article.text }}</td>
             </tr>
             <tr>
-                <th>Alt</th>
-                <td>{{ article.alt }}</td>
-            </tr>
-            <tr>
                 <th>Date</th>
                 <td>{{ article.date ? article.date|date('Y-m-d H:i:s') : '' }}</td>
             </tr>
@@ -35,9 +31,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_article_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_article_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_article_edit', {'id': article.id}) }}">edit</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_article_edit', {'id': article.id}) }}">Modifier</a>
 
     {{ include('article/_delete_form.html.twig') }}
 </section>
