--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <h3>Modifier l'article</h3>
 
-    {{ include('article/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('article/_form.html.twig', {'button_label': 'Mettre à jour'}) }}
 
     <a class="btn btn-outline-primary" href="{{ path('app_article_index') }}">Retour à la liste</a>
 
