--- a/assets/styles/report.scss
+++ b/assets/styles/report.scss
@@ -7,6 +7,10 @@
 .cat-reported {
     width: 100%;
     height: auto;
-    padding: 1rem;
-    border-radius: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 3px 4px grey;
+}
+
+.coord-text {
+    margin-bottom: 0;
 }
