--- a/templates/_header.html.twig
+++ b/templates/_header.html.twig
@@ -6,7 +6,7 @@
                 <div class="content">
                     <a href="{{ path('app_article_index') }}">Articles</a>
                     <a href="{{ path('app_breed_index') }}">Races</a>
-                    <a href="">Utilisateurs</a>
+                    <a href="{{ path('app_user_index') }}">Utilisateurs</a>
                 </div>
         </div>
         {% endif %}
