--- a/templates/breed/edit.html.twig
+++ b/templates/breed/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Breed{% endblock %}
+{% block title %} {{ parent() }} - Races{% endblock %}
 
 {% block body %}
-    <h1>Edit Breed</h1>
+    <h4>Détails de la race</h4>
 
-    {{ include('breed/_form.html.twig', {'button_label': 'Update'}) }}
+    {{ include('breed/_form.html.twig', {'button_label': 'Mettres à jour'}) }}
 
-    <a href="{{ path('app_breed_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_breed_index') }}">Retour à la liste</a>
 
     {{ include('breed/_delete_form.html.twig') }}
 {% endblock %}
