--- a/templates/breed/index.html.twig
+++ b/templates/breed/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Breed index{% endblock %}
+{% block title %} {{ parent() }} - Races{% endblock %}
 
 {% block body %}
-    <h1>Breed index</h1>
+    <h4>Liste des races</h4>
 
     <table class="table">
         <thead>
@@ -19,17 +19,17 @@
                 <td>{{ breed.id }}</td>
                 <td>{{ breed.name }}</td>
                 <td>
-                    <a href="{{ path('app_breed_show', {'id': breed.id}) }}">show</a>
-                    <a href="{{ path('app_breed_edit', {'id': breed.id}) }}">edit</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_breed_show', {'id': breed.id}) }}">Montrer</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_breed_edit', {'id': breed.id}) }}">Modifier</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('app_breed_new') }}">Create new</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_breed_new') }}">Ajouter une race/a>
 {% endblock %}
