--- a/templates/breed/show.html.twig
+++ b/templates/breed/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Breed{% endblock %}
+{% block title %} {{ parent() }} - Races{% endblock %}
 
 {% block body %}
-    <h1>Breed</h1>
+    <h4>Détails de la race</h4>
 
     <table class="table">
         <tbody>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_breed_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_breed_index') }}">Retour à la liste</a>
 
-    <a href="{{ path('app_breed_edit', {'id': breed.id}) }}">edit</a>
+    <a class="btn btn-outline-warning" href="{{ path('app_breed_edit', {'id': breed.id}) }}">Modifier</a>
 
     {{ include('breed/_delete_form.html.twig') }}
 {% endblock %}
