--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %} {{ parent() }} - Utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
+    <h4>Liste des utilisateurs</h4>
 
     <table class="table">
         <thead>
@@ -27,12 +27,12 @@
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
                 <td>{{ user.pseudo }}</td>
                 <td>
-                    <a href="{{ path('app_user_show', {'id': user.id}) }}">show</a>
+                    <a class="btn btn-outline-primary" href="{{ path('app_user_show', {'id': user.id}) }}">Montrer</a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="7">no records found</td>
+                <td colspan="7">Aucun enregistrement trouvé</td>
             </tr>
         {% endfor %}
         </tbody>
