--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User{% endblock %}
+{% block title %} {{ parent() }} - Utilisateurs{% endblock %}
 
 {% block body %}
-    <h1>User</h1>
+    <h4>Détails de l'utilisateur</h4>
 
     <table class="table">
         <tbody>
@@ -34,7 +34,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('app_user_index') }}">back to list</a>
+    <a class="btn btn-outline-primary" href="{{ path('app_user_index') }}">Retour à la liste</a>
 
     {{ include('user/_delete_form.html.twig') }}
 {% endblock %}
