--- a/templates/cgu/index.html.twig
+++ b/templates/cgu/index.html.twig
@@ -9,10 +9,10 @@
 </style>
 
 <main class = 'cgu'>
-    <h1>MIN...OU ?</h1>
-    <h2>Conditions générales d'utilisation du site</h2>
+    <h2>MIN...OU ?</h2>
+    <h3>Conditions générales d'utilisation du site</h3>
 
-    <h3>Description du site</h3>
+    <h4>Description du site</h4>
     <p>Le site Minou est développé pour permettre à n'importe qui de signaler la localisation d'un chat perdu à son propriétaire</p>
     <p>Il propose à celui qui veut signaler un chat</p>
     <ul>
@@ -24,10 +24,10 @@
         <li>d'enregistrer son chat et de le déclarer perdu</li>
         <li>d'accéder à ses différentes localisation signalées</li>
     </ul>
-    <h3>Droits et obligations des utilisateurs</h3>
+    <h4>Droits et obligations des utilisateurs</h4>
     <p>Les utilisateurs du site, qu'ils s'authentifien ou non, doivent l'utiliser conformément à sa destination. En ce qui concerne les lanceurs d'alerte (nom donné aux utilisateurs qui signalent un chat), tout signalement volontairement erroné est proscrit</p>
-    <h3>Droits et obligations de l'éditeur</h3>
+    <h4>Droits et obligations de l'éditeur</h4>
     <p>L'éditeur du site s'engage à en assurer la disponibilité technique. Il n'est cependant pas responsable de l'indisponibilité des fournisseurs d'accès au réseau ou de l'hébergeur du site. Dans la mesure du possible, l'administrateur du site préviendra chaque propriétaire de la période d'indisponibilité prévue pour dépannage ou maintenance</p>
-
+    <a class="btn btn-outline-success" href="{{ path('home') }}">Revenir à l'accueil</a>
 </main>
 {% endblock %}
