--- a/templates/report/index.html.twig
+++ b/templates/report/index.html.twig
@@ -31,7 +31,7 @@
         
         <br>
         <div class="center">
-        <button type="submit" class="btn btn-warning" onclick="return confirm('Attention, les informations que vous fournissez seront transmises au propriétaire du chat');">Enregistrer</button>
+        <button type="submit" class="btn btn-warning" onclick="return confirm("Attention, les informations que vous fournissez seront transmises au propriétaire du chat.");">Enregistrer</button>
         </div>
     </div>
     {{ form_end(form) }}
