--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -15,6 +15,13 @@
 
 {% block body %}
 <section class="home">
+{% for category, messages in app.flashes %}
+    {% for message in messages %}
+        <div class="alert alert-{{ category }}">
+            {{ message }}
+        </div>
+    {% endfor %}
+{% endfor %}
 <h2 id="item1">Chats</h2>
     <section class="signal">
         {% if app.user %}
